# log_platform

./: Cargo.toml  README.md
log_collect/: Cargo.toml  config.yaml
log_collect/src/: collect.rs  config.rs  event.rs  init.rs  main.rs
